Fixed a bug causing uneven width for major components

--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -6,9 +6,6 @@ article {
     align-content: center;
     flex-wrap: wrap;
     height: 100vh;
-
-    background-image: url("../../../assets/home-background.jpg");
-    background-size: cover;
 }
 
 h1,
